<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoDroidCx</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="comenzar">Comenzar</string>
    <string name="configurar">Configurar</string>
    <string name="acerca">Acerca de ...</string>
    <string name="exit">Salir</string>
    <string name="tituloAplicacion">GeoDroidCx</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_salir">Salir</string>
    <string name="title_activity_seleccion">Seleccion</string>
    <string name="start">Encendido</string>
    <string name="stop">Apagado</string>

</resources>